// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabling emphasis 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "*emphatic **strong** emphatic*",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`disabling inlineCode 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "\`const js = true \`",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;
